# pcat

./: .gitignore  README.md  pyproject.toml
src/pcat/: core.py  main.py
